# wave_attenuation_1d

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
configs/: config_dense.txt  config_sparse.txt
wave_attenuation_1d/: __init__.py  cli.py  solver.py
