[project]
name = "wave-attenuation-1d"
version = "0.1.1"
description = "Simple 1D Wave Attenuation Model for Coastal Vegetation"
authors = [
    {name = "Sandy Herho",email = "sandy.herho@email.ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy (>=1.20.0)",
    "numba (>=0.54.0)",
    "netcdf4 (>=1.5.0)",
    "tqdm (>=4.62.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
